# redis-server

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  application.py  main.py  resp_parser.py
tests/: __init__.py  test_application.py  test_resp_parser.py
